# desktop-sms-receiver

./: .gitignore  README.md  package.json
apps/backend/: .dockerignore  .env.docker.example  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
apps/backend/app/: config.py  database.py  main.py  models.py  schemas.py
apps/backend/app/api/: security.py
apps/backend/app/api/routes/: admin.py  admin_page.css  admin_page.html  admin_page.js  messages.py  realtime.py
apps/backend/app/services/: notification_hub.py  parser.py  routing.py
apps/backend/scripts/: smoke_sms_flow.py  smoke_targeted_routing.py
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/scripts/: build-icons.cjs  verify-runtime.cjs
apps/desktop/src/: global.d.ts  types.ts
apps/desktop/src/renderer/: App.tsx  copy.ts  main.tsx  styles.css
