[project]
name = "sms-backend"
version = "0.1.0"
description = "SMS inbound service for desktop notifications"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.41",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "itsdangerous>=2.2.0"
]

[tool.uv]
package = false
